# OSI2025-Grupa-4

./: .gitignore  CMakeLists.txt  README.md  compile.bat
data/: bills.csv  devices.csv  employee.csv  employees.csv  generalData.csv  parts.csv  receiptOrders.csv  serviceReports.csv  users.csv  workOrders.csv
include/client/: deviceRepairStatusManagement.hpp
include/common/: authentication.hpp  personalDataManagement.hpp
include/common/models/: Bill.hpp  Client.hpp  Device.hpp  Part.hpp  Person.hpp  Receipt_order.hpp  ServiceReport.hpp  WorkOrder.hpp  Worker.hpp
include/common/util/: GeneratePIN.hpp  GenerateUniqueId.hpp  Validate.hpp  csv_data_manipulator.hpp
include/employee/: UpravljanjeZaposlenima.hpp  billsManagement.hpp  deviceIntakeManagement.hpp  deviceRepairStatusManagement.hpp  devicesManagement.hpp  employeesManagement.hpp  generalDataManagement.hpp  partsManagement.hpp  paymentManagement.hpp  receiptOrdersManagement.hpp  serviceReportsManagement.cpp  serviceReportsManagement.hpp  statisticsFunk.hpp  usersManagement.hpp  workOrdersManagement.hpp
include/models/: Bill.hpp  Client.hpp  Device.hpp  Part.hpp  Person.hpp  Receipt_order.hpp  WorkOrder.hpp  Worker.hpp
src/: mainClient.cpp  mainEmployee.cpp  mainKlijent.cpp
src/client/: CMakeLists.txt  deviceRepairStatusManagement.cpp
src/common/: CMakeLIsts.txt  authentication.cpp  personalDataManagement.cpp
src/common/models/: Bill.cpp  Client.cpp  Device.cpp  Part.cpp  Person.cpp  Receipt_order.cpp  ServiceReport.cpp  WorkOrder.cpp  Worker.cpp
src/common/util/: GeneratePIN.cpp  GenerateUniqueId.cpp  Validate.cpp  csv_data_manipulator.cpp
src/employee/: CMakeLists.txt  UpravljanjeZaposlenima.cpp  billsManagement.cpp  deviceIntakeManagement.cpp  deviceRepairStatus.Managementcpp  deviceRepairStatusManagement.cpp  devicesManagement.cpp  employeesManagement.cpp  generalDataManagement.cpp  partsManagement.cpp  paymentManagement.cpp  receiptOrdersManagement.cpp  serviceReportsManagement.cpp  statisticsFunk.cpp  usersManagement.cpp  workOrdersManagement.cpp  workOrdersManagement_BACKUP_1547.cpp
src/models/: Bill.cpp  Client.cpp  Part.cpp  Person.cpp  Receipt_order.cpp  ServiceReport.cpp  WorkOrder.cpp  Worker.cpp
src/util/: csv_data_manipulator.cpp
test/: test_csv_data_manipulator.cpp
tests/: CMakeLists.txt  test_Csv_data_manipulator.cpp  test_Device.cpp  test_Part.cpp  test_Person.cpp  test_Receipt_order.cpp  test_ServiceReport.cpp  test_WorkOrder.cpp  test_Worker.cpp  test__employee_workOrdersManagement.cpp  test_bill.cpp  test_employee_billsManagement.cpp  test_employee_deviceIntakeManagement.cpp  test_employee_devicesManagement.cpp  test_employee_employeesManagement.cpp  test_employee_generalDataManagement.cpp  test_employee_partsManagement.cpp  test_employee_receiptOrdersManagement.cpp  test_employee_serviceReportsManagement.cpp  test_employee_usersManagement.cpp  test_partsManagement.cpp  test_usersManagement.cpp
